# traversability_estimation

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
config/: obstacles.yaml  rellis_to_flexibility.yaml  rellis_to_obstacles.yaml  rellis_to_traversability.yaml  rellis_traversability.yaml  semantickitti19.yaml  semantickitti19_to_flexibility.yaml  semantickitti19_to_traversability.yaml  traversability.yaml  workspace.repos
data/: Rellis_3D
docs/: docker.md  install.md  rellis.md  trav_data.md
launch/: base_footprint.launch  cloud_filter.launch  cloud_fusion.launch  cloud_ortho_stats.launch  cloud_projection.launch  cloud_segmentation.launch  cloud_segmentation_bag_demo.launch  cloud_segmentation_dataset_demo.launch  cloud_segmentation_path_planner.launch  color_pc_bagfile_demo.launch  color_point_cloud_demo.launch  color_semantic_point_cloud.launch  ctu_robot.launch  ctu_robot_cloud.launch  demo.launch  demo1.launch  demo_cloud.launch  fused_traversability.launch  generate_points.launch  generate_trav_src.launch  geometric_cloud_segmentation.launch  geometric_traversability.launch  hrnet_inference.launch  husky_robot.launch  husky_robot_cloud.launch  image_segmentation_dataset_demo.launch  image_segmentation_demo.launch  marv_robot.launch  orient_frame.launch  path_planner.launch  play_bag.launch  robot_data.launch  semantic_cloud_segmentation.launch  semantic_traversability.launch  semantic_traversability_tconcord3d.launch  show_trav_data.launch  slam.launch  traversability_bag_demo.launch  traversability_bagfile_demo.launch  (+5 more)
(+174 files in other folders)
