<?xml version="1.0"?>
<package format="2">
  <name>traversability_estimation</name>
  <version>0.0.1</version>
  <description>Semantic Segmentation of Images and Point Clouds for Traversability Estimation</description>
  <url type="website">https://github.com/RuslanAgishev/traversability_estimation</url>
  <maintainer email="agishrus@fel.cvut.cz">Ruslan Agishev</maintainer>
  <maintainer email="tpetricek@gmail.com">Tomas Petricek</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ros_numpy</depend>

  <build_depend>message_generation</build_depend>
  <build_export_depend>message_generation</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
